--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			</form>
 			<div class="tasksBoard">
 			<ul>
-				<li><span class="delete">×</span><input type="checkbox"><label>Vanilla JavaScript</label></li>
+				<!-- <li><span class="delete">×</span><input type="checkbox"><label>Vanilla JavaScript</label></li>
 				<li><span class="delete">×</span><input type="checkbox"><label>Vue.js</label></li>
 				<li><span class="delete">×</span><input type="checkbox"><label>React.js</label></li>
-				<li><span class="delete">×</span><input type="checkbox"><label>Node.js</label></li>
+				<li><span class="delete">×</span><input type="checkbox"><label>Node.js</label></li> -->
 			</ul>
 			<a id="clear">Clear</a>
 			</div>
